--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/icon-styles.css" />
     <link rel="stylesheet" href="css/style.css" />
 
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -29,5 +29,75 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom--big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom--small">
+              You are going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel vero
+              fugiat, ut iure blanditiis quasi ex quis unde tempore dolores.
+              Sint illo reprehenderit laboriosam totam nihil optio ab? Autem,
+              quam.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom--small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+              expedita impedit mollitia?
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1"></img>
+              <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2"></img>
+              <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3"></img>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-world feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom--small">Explore the world</h3>
+              <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim ncidunt, vel error commodi.</p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-compass feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom--small">Meet nature</h3>
+              <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim ncidunt, vel error commodi.</p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-map feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom--small">Find your way</h3>
+              <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim ncidunt, vel error commodi.</p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-heart feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom--small">Live a healthier life</h3>
+              <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim ncidunt, vel error commodi.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
